crates/cribo/tests/snapshots/ruff_lint_results@ast_rewriting_happy_path.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/ast_rewriting_happy_path/main.py
---
RuffLintResults {
    f401_violations: [
        "Line 5: F401 - `typing.Dict` imported but unused",
        "Line 5: F401 - `typing.Any` imported but unused",
        "Line 6: F401 - `enum.Enum` imported but unused",
        "Line 7: F401 - `typing.Optional` imported but unused",
        "Line 8: F401 - `typing.List` imported but unused",
    ],
    f404_violations: [],
    other_violations: [],
    total_violations: 5,
}
