crates/cribo/tests/snapshots/ruff_lint_results@future_imports_basic.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/future_imports_basic/main.py
---
RuffLintResults {
    f401_violations: [
        "Line 7: F401 - `typing.Union` imported but unused",
    ],
    f404_violations: [],
    other_violations: [],
    total_violations: 1,
}
